--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-    <link rel="stylesheet" type="text/css" href="https://github.com/Squog-The-Scriptor/Results-Summary-Component/blob/main/summary-sheet.css">
+    
+    <link type="text/css" rel="stylesheet" href="summary-sheet.css"/>
     
     <title>Frontend Mentor | Results summary component | KL</title>
 
