--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     
-    <link type="text/css" rel="stylesheet" href="summary-sheet.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/Squog-The-Scriptor/Results-Summary-Component/blob/8942711343a1645ced4c2147b384bca36274d333/summary-sheet.css">
     
     <title>Frontend Mentor | Results summary component | KL</title>
 
