--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     
-    <link rel="stylesheet" type="text/css" href="https://Squog-The-Scriptor.github.io/summary-sheet.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     
     <title>Frontend Mentor | Results summary component | KL</title>
 
