--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Kevin Long</a>.
+      Coded by <a href="#">KL</a>.
     </div>
   </footer>
 
